Fix check list text wrap bug for long text and vertically center it

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,13 @@ input[type=checkbox] {
   }
 }
 
+.checkbox {
+  display: table;
+  width: 100%;
+  height:70px;
+  margin-bottom: 30px;
+}
+
 label.checkbox-text {
   /*Add pulse animation*/
   animation-name: pulse;
@@ -40,14 +47,23 @@ label.checkbox-text {
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-iteration-count: infinite;
 
+  /*display: table-cell;
+  vertical-align: middle;
+  text-align: center;*/
+
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+
   background-color: #fff;
   border: 1px solid #e4e4e4;
-  height: 70px;
-  width: 100%;
-  padding: 10px 0 10px 0;
-  margin: 10px 0 10px 0;
 
-  line-height: 50px;
+  padding: 10px 0 10px 0;
+  /*height: 70px;
+  width: 100%;
+  margin: 10px 0 10px 0;*/
+
+  /*line-height: 50px;*/
   /*-webkit-box-shadow: 0px 6px 15px -5px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 6px 15px -5px rgba(0,0,0,0.75);
   box-shadow: 0px 6px 15px -5px rgba(0,0,0,0.75);*/
@@ -107,9 +123,3 @@ label.checkbox-text {
   background-color: #8c1bff;
   border-color: #8c1bff;
 }
-
-/*.checkbox-box {
-  position: fixed;
-  margin-left: -9999px;
-  visibility: hidden;
-}*/
